unpackaged/main/default/objects/USAL_Benefit_Claimed_Data__c/USAL_Benefit_Claimed_Data__c.object-meta.xml
<CustomObject>
    <description>Benefit Claimed without Majesco License</description>
    <label>USAL Benefit Claimed Data</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>USAL Benefit Claimed Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>USAL Benefit Claims Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>