unpackaged/main/default/objects/USAL_Benefit_Claimed_Data__c/fields/Benefit_Claimed_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Claimed_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Benefit Claimed External ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>