unpackaged/main/default/objects/USAL_Benefit_Claimed_Data__c/fields/Benefit_Name__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Benefit Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>