unpackaged/main/default/objects/USAL_Benefit_Claimed_Data__c/fields/Benefit_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Benefit Start Date</label>
    <type>Date</type>
</CustomField>