unpackaged/main/default/objects/USAL_Benefit_Claimed_Data__c/fields/Claim_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Claim_External_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Claim External ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>