unpackaged/main/default/objects/USAL_Benefit_Claimed_Data__c/fields/Claimant_Insured__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Insured__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claimant/Insured</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>USAL Benefit Claims Data</relationshipLabel>
    <relationshipName>USAL_Benefit_Claims_Data</relationshipName>
    <type>Lookup</type>
</CustomField>