unpackaged/main/default/objects/USAL_Benefit_Claimed_Data__c/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Type Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>