unpackaged/main/default/objects/USAL_Benefit_Claimed_Data__c/fields/USAL_Claim_Name__c.field-meta.xml
<CustomField>
    <fullName>USAL_Claim_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>USAL Claim Name</label>
    <referenceTo>USAL_Claim_Data__c</referenceTo>
    <relationshipLabel>USAL Benefit Claims Data</relationshipLabel>
    <relationshipName>USAL_Benefit_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>