unpackaged/main/default/objects/USAL_Benefit_Claimed_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Benefit_Name__c</columns>
    <columns>Claimant_Insured__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>